Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45501

Uninitialized last cursor position being used when processing QEvent::Leave

    XMLWordPrintable

Details

    • 32341e8ef85f593358db47b3ea58875708f24cda (qtbase/5.5, 23.4.2015, 5.5)

    Description

      If application never receives mouse events, but widget is hovered when another application had stolen focus, application tries to convert uninitialized last cursor position from floating point coordinate to integer.

      Reproducing with attached example:
      1. set break point to lambda function
      2. move cursor to position where window would open
      3. start in debug mode and wait
      4. breakpoint is hit -> continue (F5)

      -> Application should crash with SIGFPE

      Alternatively:

      • Place app window over console
      • Move mouse into area where console and window overlap
      • Start app
      • ALT-Tab to console

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes